--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "publisher": "jellydn",
-  "name": "code-notes",
-  "displayName": "code-notes",
+  "name": "vscode-code-notes",
+  "displayName": "Code Notes",
   "version": "0.1.1",
   "private": true,
   "packageManager": "pnpm@10.28.0",
