feat: add AI tool selection feature with quick pick menu and terminal naming

--- a/package.json
+++ b/package.json
@@ -313,6 +313,11 @@
             "type": "string",
             "description": "Prompt template text. Supports {{comments}} and {{files}} placeholders."
           }
+        },
+        "vscode-code-notes.showAIQuickPick": {
+          "type": "boolean",
+          "default": false,
+          "description": "Show quick pick menu for AI tool selection before sending to AI"
         }
       }
     }
